cabal-version:      3.0
name:               HasChor
version:            0.2.0.0
synopsis:           Functional choreographic programming in Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gan Shen
maintainer:         Gan Shen <gan_shen@icloud.com>
copyright:          (c) Gan Shen 2024
category:           Concurrency
description:
    HasChor is a library for functional choreographic programming in Haskell.
    See the README.md for more information.

tested-with:
    GHC == 9.4.8

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/gshen42/HasChor

source-repository this
    type:     git
    location: https://github.com/gshen42/HasChor
    tag:      v0.2.0.0

library
    hs-source-dirs:   src
    default-language: GHC2021
    exposed-modules:
--        Choreography
--        Choreography.Choreo
--        Choreography.Located
--        Choreography.Location
--        Choreography.Network
--        Choreography.Network.Http
--        Choreography.Network.Local
        Control.Monad.Async
        Control.Monad.Freer
    build-depends:
        , async
        , base
        , bytestring
        , http-client
        , mtl
        , servant
        , servant-client
        , servant-server
        , template-haskell
        , transformers
        , unordered-containers
        , warp

executable tests
    hs-source-dirs:   tests
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base
        , bytestring
        , network-simple

executable tcp-window
    hs-source-dirs:   examples/tcp-window
    main-is:          Main.hs
    default-language: GHC2021
    ghc-options: -threaded
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , split   >= 0.2  && < 0.3
        , time    >= 1.11 && < 1.13

executable bookseller-0-network
    hs-source-dirs:   examples/bookseller-0-network
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable bookseller-1-simple
    hs-source-dirs:   examples/bookseller-1-simple
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable bookseller-2-higher-order
    hs-source-dirs:   examples/bookseller-2-higher-order
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable bookseller-3-loc-poly
    hs-source-dirs:   examples/bookseller-3-loc-poly
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable diffiehellman
    hs-source-dirs:   examples/diffiehellman
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , random  >= 1.2  && < 1.3
        , time    >= 1.11 && < 1.13

executable karatsuba
    hs-source-dirs:   examples/karatsuba
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , async      >= 2.2  && < 2.3
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7

executable kvs1
    hs-source-dirs:   examples/kvs-1-simple
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable kvs2
    hs-source-dirs:   examples/kvs-2-primary-backup
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable kvs3
    hs-source-dirs:   examples/kvs-3-higher-order
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable kvs4
    hs-source-dirs:   examples/kvs-4-loc-poly
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable mergesort
    hs-source-dirs:   examples/mergesort
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable quicksort
    hs-source-dirs:   examples/quicksort
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , async      >= 2.2  && < 2.3
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable ring-leader
    hs-source-dirs:   examples/ring-leader
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base         >= 4.16 && < 4.20
        , transformers >= 0.5  && < 0.7

executable playground
    hs-source-dirs:   examples/playground
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base         >= 4.16 && < 4.20
